public/css/contextmenu.css
.context-menu {
  display: none;
  position: absolute;
  z-index: 1000;
  background: white;
  border: 1px solid #ccc;
  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
  padding: 1px 0;
  border-radius: 3px;
}

.context-menu ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.context-menu ul li {
  font-size: 16.5px;
  padding: 5px 10px;
  cursor: pointer;
}

.context-menu ul li:hover {
  background-color: #eee;
}

